# llm-semiconductor-analytics-assistant

./: .gitignore  README.md  pyproject.toml
docs/: 00_project_overview.md  01_requirements.md  02_architecture.md  04_evaluation.md  07_tools_and_mcp.md
scripts/: sanity_check.py
src/semicon_assistant/: config.py
src/semicon_assistant/tools/: base.py
tests/: test_imports.py
